Transformed to .esproj, set output folder to dist, and configured Test Explorer to display the tests

--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
       "ts-jest": {
         "tsconfig": "./tsconfig.json"
       }
-    }
+    },
+    
+    "moduleFileExtensions": [ "ts", "tsx", "js", "jsx", "json", "node" ]
+  },
+  "vsTestOptions": {
+    "testRoot": "./dist"
   }
 }
